@@ -1,4 +1,6 @@
 Version 0.1.0:
+- CVL: Use filter separation for the min and max filters to improve
+  performance.
 - cvtool: Added the wallis subcommand to the filter command.
 - CVL: Aded cvl_filter_wallis() and cvl_filter3d_wallis().
 - Add "extern inline" functions to the corresponding .c files so that the
